# lala-interval

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
benchmarks/: bench.cpp
benchmarks/cp2026/: cdiv20.csv  ediv20.csv  fdiv20.csv  tdiv20.csv  tdiv30.csv
include/lala/: finterval.hpp  flb.hpp  lb.hpp  ub.hpp  ustore.hpp  zinterval.hpp  zlb.hpp
tests/: finterval_test.cpp  generic_lattice_test.hpp  lb_test.cpp  ub_test.cpp  zinterval_test.cpp
